<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_brain</name>
  <version>1.0.0</version>
  <description>Robot Behavior Tree and Top Level Logic</description>
  <maintainer email="user@todo.todo">sunrise</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
